--- a/templates/mods/adminCP_dbAdmin.template
+++ b/templates/mods/adminCP_dbAdmin.template
@@ -1,5 +1,5 @@
 <div style="text-align:center;">
-	<form action="{CONFIGS_path_root}?mod=adminCP&act=dbAdmin&func=dbSelect&debug=1" method="post">
+	<form action="{CONFIGS_path_root}?mod=adminCP&act=dbAdmin&func=dbSelect" method="post">
 		<input type="hidden" name="curdb" value="{CURDB}"/>
 		<select name="dbname">
 			{DATABASES}
