--- a/templates/themes/theBasics/footer.template
+++ b/templates/themes/theBasics/footer.template
@@ -1,8 +1,9 @@
 			</div>
 			<div id="footer">
-				{FOOTERTEXT}
+				Powered by Simplesite v1.5 &copy; 2014<br/>Jonathan Stockton <br/>&lt;<a href="mailto:jonstockton1416@gmail.com">jonstockton1416@gmail.com</a>&gt;
 			</div>
 		</div>
+		{ISADMIN}<script type="text/javascript">editArray='{EDITARRAY}';</script>{/ISADMIN}
 	</body>
 </html>
 
