Updated branch to version 2.0 code

--- a/templates/themes/JCake/index.template
+++ b/templates/themes/JCake/index.template
@@ -1,99 +1,1 @@
-{GET_testit}
-
-<b>Latest Updates:</b><br/>
-{EDITABLE}2/15/2014 - Installed over the Windows partition on my laptop and lost the CHANGELOG for SimpleSite and therefore all of my TODOs and previous bug documentation so I've decided to add another editable here for it after a bug-hunt.<br/>
-8/27/2013 - Not many updates, Internet Explorer does not work with current editables AJAX and the admin panel design is screwy, looking for a fix.<br>
-6/27/2013 - Database administration has been fixed.<br>
-6/26/2013 - Editables are working besides a feature that I think should be added (bbcodes).  Also, I just discovered that the database administration section of the adminCP module does not work due to the loss of the fixed code during the computer crash which caused me to change hosting.{/EDITABLE}<br/><br/>
-<b>Release Information:</b><br/>
-{EDITABLE}<table style="width:50%;">
-<tbody><tr>
-<td><i>Latest Stable</i></td><td><a href="{CONFIGS_path_root}Releases/SimpleSite_v1.1.zip">1.1</a></td>
-</tr>
-<tr>
-<td><i>Previous Versions:</i></td><td><a href="{CONFIGS_path_root}Releases/SimpleSite_v1.0.zip">1.0</a></td>
-</tr>
-</tbody></table>{/EDITABLE}<br/><br/>
-<b>Changelog:</b><br/>
-<pre>{EDITABLE}v0.1 (Released 12/07/12):
-=========================
-   * SimpleSite Started
-
-v1.0 (Released 03/01/13):
-=========================
-   General:
-   --------
-      * Config file changed (new version number: 1.0).
-      * simplewidget.interface.php deleted (unnecessary).
-
-   Documents:
-   ----------
-      * Changelog
-
-   "Built-In" Modules:
-   -------------------
-      * AdminCP v1.0 - Administrative control panel
-
-   Features:
-   ---------
-      * IP based blocking
-      * Widgets
-
-   Template Constants:
-   -------------------
-      * ISADMIN - Display text if the user is admin ex. &#123;ISADMIN}Hi Admin!{/ISADMIN}
-
-   Template Access Features:
-   -------------------------
-      * Added template includes - &#123;TEMPLATE_/path/to.template}
-      * Added template based session variable access - ex. &#123;SESSION_varname}
-      * Added template based user input (GET/POST) access - ex. &#123;GET_varname} &#123;POST_varname}
-
-v1.1 (Released 4/25/13):
-========================
-   General:
-   --------
-      * $configs passed to isInstalled() and install().
-      * SimpleUtils class changed (new version number: 1.1)
-         - Added function checkReqFiles()
-         - Added function checkReqTbls()
-         - Added function installReqFiles()
-         - Added function installReqTbls()
-      * Config file changed (new version number: 1.1)
-         - Loaded blocked IP's from MySQL database
-      * SimpleDisplay class changed (new version number: 1.1)
-         - Bugfix: Wasn't passing $configs to $mod->install() when replacing &#123;CONTENT}. "(@$obj->isInstalled($configs))?TRUE:@$obj->install()" => "(@$obj->isInstalled($configs))?TRUE:@$obj->install($configs)" 
-
-   Documents:
-   ----------
-      * Changelog moved to docs/
-      * Developer Installation Guide
-      * Module Development Cheatsheet
-      * Template Constants Cheatsheet
-      * Theme Development Guide
-
-   "Built-In" Modules:
-   -------------------
-      * AdminCP Updated (new version number: 1.1)
-         - Bugfix: Used wrong variable for saving templates. "$_GET['func']" => "$_POST['submit']"
-         - Completed install() and isInstalled().
-         - Created IP blocking page.
-         - Backup system.
-         - Added upload form to template admin.
-         - Bugfix: Custom templates wasn't being listed.
-         - Added new template form to template admin.
-
-   Features:
-   ---------
-      * Widgets Updated
-         - Changed from external functions to methods
-
-   Template Access Features:
-   -------------------------
-      * {CONFIG_*} Updated
-         - Bugfix: Couldn't access &#123;CONFIGS_path_mod_templates}. "/{CONFIGS_([A-Za-z0-9]*)_([A-Za-z0-9]*)}/si" => "/{CONFIGS_([A-Za-z0-9]*)_([A-Za-z0-9_]*)}/si"
-v2.0 (Not Released):
---------------------
-* Changes prior to 2/25/14 unknown at this time
-* Bugs Discovered:
-    - Editables need to output "&#123;" while editing, not "{".{/EDITABLE}</pre>
+<b>It Works!</b>
