--- a/templates/themes/theBasics/header.template
+++ b/templates/themes/theBasics/header.template
@@ -1,12 +1,19 @@
 <html>
 	<head>
 		<title>{TITLE}</title>
+		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_root}css/SimpleCSS.css"/>
 		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_root}{CONFIGS_path_templates}/css/main.css"/>
-		{ISADMIN}<script type="text/javascript" src="{CONFIGS_path_root}js/editable.js"></script>{/ISADMIN}
+		<script type="text/javascript" src="js/class2tag.js"></script>
+		<script type="text/javascript" src="js/editable.js"></script>
+		<meta http-equiv="cache-control" content="no-cache, no-store">
 	</head>
-	<body>
-		<div id="container">
-			<div id="center">
-				<div id="top">
-					<a href="{CONFIGS_path_root}">Index</a>{ISADMIN} | <a href="{CONFIGS_path_root}?mod=adminCP">Admin CP</a> | <a href="{CONFIGS_path_root}?mod=adminCP&act=logout">Logout</a>{/ISADMIN}
+	<body class="smtop mleft minWidth-850">
+		<div id="container" class="one-vert container mright mleft">
+			<noscript>
+				<div class="one-of-one bbottom btop smbottom centered darkgrayBack medLgText dredText">
+					Javascript is not enabled - some features may not work.
 				</div>
+			</noscript>
+			<div id="linklist" class="one-of-one bbottom smbottom centered">
+				<a href="{CONFIGS_path_root}">Index</a> | <a href="{CONFIGS_path_root}?mod=Guestbook">Guestbook</a>{ISADMIN} | <a href="{CONFIGS_path_root}?mod=adminCP">AdminCP</a> | <a href="{CONFIGS_path_root}?mod=adminCP&act=logout">Logout</a>{/ISADMIN}
+			</div>
