--- a/templates/mods/adminCP.template
+++ b/templates/mods/adminCP.template
@@ -2,10 +2,11 @@
 						{ACTIONPAGE}
 					</div>
 					<div id="options" style="width:20%;clear:left;">
-<a href="{CONFIGS_path_root}?mod=adminCP&act=backup">Backups</a><br/>
+						<a href="{CONFIGS_path_root}?mod=adminCP&act=toggleDbg">Toggle Debug (Current: {IF "{GET_debug}" eq "1"}On{ELSE}Off{/IF})</a><br/>
+						<a href="{CONFIGS_path_root}?mod=adminCP&act=backup">Backups</a><br/>
 						<a href="{CONFIGS_path_root}?mod=adminCP&act=configAdmin">Configurations</a><br/>
 						<a href="{CONFIGS_path_root}?mod=adminCP&act=dbAdmin">Database Admin</a><br/>
-<a href="{CONFIGS_path_root}?mod=adminCP&act=blocked">IP Blocking</a><br/>
+						<a href="{CONFIGS_path_root}?mod=adminCP&act=blocked">IP Blocking</a><br/>
 						<a href="{CONFIGS_path_root}?mod=adminCP&act=modAdmin">Module Admin</a><br/>
 						<a href="{CONFIGS_path_root}?mod=adminCP&act=templateAdmin">Template Admin</a><br/>
 						<a href="{CONFIGS_path_root}?mod=adminCP&act=themeMgr">Theme Manager</a><br/>
