Added more config variables for other assets directories, updated templates to take new variables into account.

--- a/templates/themes/theBasics/header.template
+++ b/templates/themes/theBasics/header.template
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<title>{TITLE}</title>
-		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_root}css/SimpleCSS.css"/>
-		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_root}{CONFIGS_path_templates}/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_css_assets}SimpleCSS.css"/>
+		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_theme_assets}theBasics/css/main.css"/>
 		<script type="text/javascript" src="js/class2tag.js"></script>
 		<script type="text/javascript" src="js/editable.js"></script>
 		<meta http-equiv="cache-control" content="no-cache, no-store">
