--- a/templates/themes/JCake/header.template
+++ b/templates/themes/JCake/header.template
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<title>{TITLE}</title>
-		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_root}{CONFIGS_path_templates}/css/main.css"/>
-		{ISADMIN}<script type="text/javascript" src="{CONFIGS_path_root}js/editable.js"></script>{/ISADMIN}
+		<link rel="stylesheet" type="text/css" href="{CONFIGS_path_theme_assets}JCake/css/main.css"/>
+		{ISADMIN}<script type="text/javascript" src="{CONFIGS_path_js_assets}editable.js"></script>{/ISADMIN}
 		<meta http-equiv="cache-control" content="no-cache, no-store">
 	</head>
 	<body>
